updated mobile view

--- a/index.html
+++ b/index.html
@@ -81,38 +81,40 @@
             <li>
               <a
                 href="#"
-                class="font-bold transition-transform duration-300 hover:scale-110 inline-block"
+                class="font-bold transition duration-300 hover:scale-110 active:scale-110 hover:opacity-80 active:opacity-80 inline-block"
                 >Home</a
               >
             </li>
             <li>
               <a
                 href="#"
-                class="font-bold transition-transform duration-300 hover:scale-110 inline-block"
+                class="font-bold transition duration-300 hover:scale-110 active:scale-110 hover:opacity-80 active:opacity-80 inline-block"
                 >Product</a
               >
             </li>
             <li>
               <a
                 href="#"
-                class="font-bold transition-transform duration-300 hover:scale-110 inline-block"
+                class="font-bold transition duration-300 hover:scale-110 active:scale-110 hover:opacity-80 active:opacity-80 inline-block"
                 >About us</a
               >
             </li>
             <li>
               <a
                 href="#"
-                class="font-bold transition-transform duration-300 hover:scale-110 inline-block"
+                class="font-bold transition duration-300 hover:scale-110 active:scale-110 hover:opacity-80 active:opacity-80 inline-block"
                 >Contact us</a
               >
             </li>
           </ul>
         </div>
       </nav>
+      <!-- banner section  -->
       <div
-        class="banner flex flex-col md:flex-row justify-center justify-evenly items-center gap-20 pb-16 px-4"
+        class="flex flex-col md:flex-row justify-center justify-evenly items-center gap-20 pb-16 px-4"
       >
-        <div class="banner-description">
+        <!-- banner description -->
+        <div>
           <h1 class="font-bebas-neue text-7xl text-[#363958]">
             <span class="text-[#FABE4C]">Be the Penguins</span> <br />
             of Winter
