--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               Lorem Ipsum is simply dummy text of the printing and typesetting
               industry.
             </p>
-            <div class="flex justify-between items-center">
+            <div class="flex justify-between items-center py-4">
               <h1 class="text-[#FABE4C] font-roboto text-4xl font-black">
                 $234
               </h1>
@@ -223,7 +223,7 @@
               Lorem Ipsum is simply dummy text of the printing and typesetting
               industry.
             </p>
-            <div class="flex justify-between items-center">
+            <div class="flex justify-between items-center py-4">
               <h1 class="text-[#FABE4C] font-roboto text-4xl font-black">
                 $234
               </h1>
@@ -268,7 +268,7 @@
               Lorem Ipsum is simply dummy text of the printing and typesetting
               industry.
             </p>
-            <div class="flex justify-between items-center">
+            <div class="flex justify-between items-center py-4">
               <h1 class="text-[#FABE4C] font-roboto text-4xl font-black">
                 $234
               </h1>
@@ -310,7 +310,7 @@
         </h1>
         <!-- card-container -->
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-10">
-          <!-- card-1 -->
+          <!-- card-4 -->
           <div
             class="p-6 bg-white rounded-3xl shadow-[0_10px_30px_0_rgba(0,0,0,0.05)]"
           >
@@ -324,7 +324,7 @@
               Lorem Ipsum is simply dummy text of the printing and typesetting
               industry.
             </p>
-            <div class="flex justify-between items-center">
+            <div class="flex justify-between items-center py-4">
               <h1 class="text-[#FABE4C] font-roboto text-4xl font-black">
                 $234
               </h1>
@@ -355,7 +355,7 @@
               </button>
             </div>
           </div>
-          <!-- card-2 -->
+          <!-- card-5 -->
           <div
             class="p-6 bg-white rounded-3xl shadow-[0_10px_30px_0_rgba(0,0,0,0.05)]"
           >
@@ -369,7 +369,7 @@
               Lorem Ipsum is simply dummy text of the printing and typesetting
               industry.
             </p>
-            <div class="flex justify-between items-center">
+            <div class="flex justify-between items-center py-4">
               <h1 class="text-[#FABE4C] font-roboto text-4xl font-black">
                 $234
               </h1>
@@ -400,7 +400,7 @@
               </button>
             </div>
           </div>
-          <!-- card-3 -->
+          <!-- card-6 -->
           <div
             class="p-6 bg-white rounded-3xl shadow-[0_10px_30px_0_rgba(0,0,0,0.05)]"
           >
@@ -414,7 +414,7 @@
               Lorem Ipsum is simply dummy text of the printing and typesetting
               industry.
             </p>
-            <div class="flex justify-between items-center">
+            <div class="flex justify-between items-center py-4">
               <h1 class="text-[#FABE4C] font-roboto text-4xl font-black">
                 $234
               </h1>
