product section added

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       </nav>
       <!-- banner section  -->
       <div
-        class="flex flex-col md:flex-row justify-center justify-evenly items-center gap-20 pb-16 px-4"
+        class="flex flex-col lg:flex-row justify-center justify-evenly items-center gap-20 pb-16 px-4"
       >
         <!-- banner description -->
         <div>
@@ -445,6 +445,67 @@
               </button>
             </div>
           </div>
+        </div>
+      </section>
+      <!-- project section -->
+      <section
+        class="flex flex-col md:flex-row items-center justify-center gap-12 p-6"
+      >
+        <!-- Left Side: Card -->
+        <div>
+          <!-- card 1 -->
+          <div
+            class="card flex items-center gap-10 rounded-3xl bg-white shadow-[0_10px_30px_0_rgba(0,0,0,0.05)] p-5 max-w-md mb-5"
+          >
+            <img class="w-20" src="icons/house.png" alt="House icon" />
+            <div>
+              <h1 class="text-[#363958] font-[Roboto] text-2xl font-bold">
+                Find the Perfect Fit
+              </h1>
+              <p class="text-[#3E3E3E] font-[Roboto] mt-4">
+                Everybody is different, which is why we offer styles for every
+                body.
+              </p>
+            </div>
+          </div>
+          <!-- card 2 -->
+          <div
+            class="card flex items-center gap-10 rounded-3xl bg-white shadow-[0_10px_30px_0_rgba(0,0,0,0.05)] p-5 max-w-md mb-5"
+          >
+            <img class="w-20" src="icons/box.png" alt="House icon" />
+            <div>
+              <h1 class="text-[#363958] font-[Roboto] text-2xl font-bold">
+                Free Exchanges
+              </h1>
+              <p class="text-[#3E3E3E] font-[Roboto] mt-4">
+                One of the many reasons you can shop with peace of mind.
+              </p>
+            </div>
+          </div>
+          <!-- card 3 -->
+          <div
+            class="card flex items-center gap-10 rounded-3xl bg-white shadow-[0_10px_30px_0_rgba(0,0,0,0.05)] p-5 max-w-md"
+          >
+            <img class="w-20" src="icons/question.png" alt="House icon" />
+            <div>
+              <h1 class="text-[#363958] font-[Roboto] text-2xl font-bold">
+                Contact Our Seller
+              </h1>
+              <p class="text-[#3E3E3E] font-[Roboto] mt-4">
+                They are here to help you. That's quite literally what we pay
+                them for.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Right Side: Image -->
+        <div class="flex justify-center">
+          <img
+            src="images/shopping.png"
+            alt="Shopping image"
+            class="max-w-xs md:max-w-sm lg:max-w-md"
+          />
         </div>
       </section>
     </main>
